--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [HackingZone]
-fromgroup = https://t.me/Masters_Chat_Group
-ToGroup = https://t.me/TeamTrickyAbhi
-GroupID = -1001717626647
-PhoneNumber = 918306590538
+fromgroup = https://t.me/PublicidadQ
+ToGroup = https://t.me/CubitaShop
+GroupID = -1799641999
+PhoneNumber = 380942594577
 EnterStop = 20000000
 StartingAccount = 1
 EndAccount = 1000000
-api = 29615991
-hash = e78a9c0af10621600836dc9366ad4d40
-Addids = AnnexMusicBot
+api = 9240450
+hash = cf8362a959332eab50c5993158402644
+Addids = Mytele_grambot
