--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,5 @@ EndAccount = 1000000
 api = 9240450
 hash = cf8362a959332eab50c5993158402644
 Addids = Mytele_grambot
+ api_token = 5915978627:AAHjmVG-CgWBLcPZXKRE_yqiti8DKXirdqs
+ group_id = -1799641999
